--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,15 @@
         "php": "^7.3|^8.0",
         "ext-exif": "*",
         "ext-gd": "*",
+        "billowapp/payfast": "^0.4.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "inertiajs/inertia-laravel": "^0.5.3",
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "league/glide-laravel": "^1.0"
+        "league/glide-laravel": "^1.0",
+        "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
