--- a/package.json
+++ b/package.json
@@ -16,17 +16,23 @@
         "ssr:serve": "node public/js/ssr.js"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.1.1",
+        "@fortawesome/free-solid-svg-icons": "^6.1.1",
+        "@fortawesome/vue-fontawesome": "^3.0.1",
         "@inertiajs/inertia": "^0.11.0",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.2.7",
         "@inertiajs/server": "^0.1.0",
         "@popperjs/core": "^2.11.0",
         "@vue/server-renderer": "^3.2.27",
+        "@vuepic/vue-datepicker": "^3.3.1",
         "autoprefixer": "^10.4.0",
+        "axios": "^0.27.2",
         "eslint": "^8.4.1",
         "eslint-plugin-vue": "^8.2.0",
         "laravel-mix": "^6.0.41",
         "lodash": "^4.17.21",
+        "moment": "^2.29.4",
         "postcss": "^8.4.4",
         "postcss-import": "^12.0.1",
         "postcss-nesting": "^7.0.1",
@@ -36,6 +42,8 @@
         "uuid": "^8.3.2",
         "vue": "^3.2.27",
         "vue-loader": "^16.2.0",
+        "vue-places": "^2.2.2",
+        "vue-vanilla-datetime-picker": "^1.2.0",
         "webpack-node-externals": "^3.0.0"
     }
 }
