--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,18 @@
     "description": "The Laravel Framework.",
     "keywords": ["framework", "laravel"],
     "license": "MIT",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/HenryFaul/payfast"
+        }
+    ],
     "require": {
         "php": "^7.3|^8.0",
         "ext-exif": "*",
         "ext-gd": "*",
-        "billowapp/payfast": "^0.4.0",
+        "ext-intl": "*",
+        "billowapp/payfast": "dev-master",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "inertiajs/inertia-laravel": "^0.5.3",
