--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "league/glide-laravel": "^1.0",
-        "spatie/laravel-permission": "^5.5"
+        "spatie/laravel-permission": "^5.5",
+        "stevebauman/location": "^6.5"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
