--- a/package.json
+++ b/package.json
@@ -16,24 +16,28 @@
         "ssr:serve": "node public/js/ssr.js"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^6.1.1",
-        "@fortawesome/free-solid-svg-icons": "^6.1.1",
+        "@fortawesome/fontawesome-svg-core": "^6.1.2",
+        "@fortawesome/free-solid-svg-icons": "^6.1.2",
         "@fortawesome/vue-fontawesome": "^3.0.1",
         "@inertiajs/inertia": "^0.11.0",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.2.7",
         "@inertiajs/server": "^0.1.0",
-        "@popperjs/core": "^2.11.0",
+        "@popperjs/core": "^2.11.5",
+        "@vue/cli-plugin-pwa": "^5.0.8",
+        "@vue/cli-service": "^5.0.8",
         "@vue/server-renderer": "^3.2.27",
-        "@vuepic/vue-datepicker": "^3.3.1",
-        "autoprefixer": "^10.4.0",
+        "@vuepic/vue-datepicker": "^3.4.0",
+        "ajv": "^8.11.0",
+        "autoprefixer": "^10.4.8",
         "axios": "^0.27.2",
-        "eslint": "^8.4.1",
-        "eslint-plugin-vue": "^8.2.0",
+        "browserslist": "^4.21.3",
+        "eslint": "^8.21.0",
+        "eslint-plugin-vue": "^8.7.1",
         "laravel-mix": "^6.0.41",
         "lodash": "^4.17.21",
         "moment": "^2.29.4",
-        "postcss": "^8.4.4",
+        "postcss": "^8.4.16",
         "postcss-import": "^12.0.1",
         "postcss-nesting": "^7.0.1",
         "prettier": "^2.5.1",
