--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "vue": "^3.2.27",
         "vue-loader": "^16.2.0",
         "vue-places": "^2.2.2",
+        "vue-pwa-install": "^1.1.0",
         "vue-vanilla-datetime-picker": "^1.2.0",
         "webpack-node-externals": "^3.0.0"
     }
