--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "tailwindcss": "^2.0.3",
         "uuid": "^8.3.2",
         "vue": "^3.2.27",
+        "vue-date-pick": "^1.4.1",
         "vue-loader": "^16.2.0",
         "vue-places": "^2.2.2",
         "vue-pwa-install": "^1.1.0",
