--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "vue-loader": "^16.2.0",
         "vue-places": "^2.2.2",
         "vue-pwa-install": "^1.1.0",
+        "vue-recaptcha-v3": "^2.0.1",
         "vue-vanilla-datetime-picker": "^1.2.0",
         "webpack-node-externals": "^3.0.0"
     }
